# Azure-Visual-Permission-Analyzer

./: Dockerfile  LICENSE  README.md  config.py  database.py  demo_data.py  main.py  migrations.py  permissions.py  pyproject.toml  repositories.py  security.py
static/css/: style.css
static/js/: app.js
templates/: base.html  config.html  health.html  index.html  report_template.html  results.html
