[project]
name = "azure-permission-analyzer-web"
version = "1.0.0"
description = "Web-based Azure Permission Analyzer for System Administrators and Cloud Engineers"
authors = [{name = "Azure Tools Team", email = "admin@example.com"}]
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "jinja2>=3.1.2",
    "python-multipart>=0.0.6",
    "aiofiles>=23.2.1",
    "azure-identity>=1.15.0",
    "azure-mgmt-authorization>=4.0.0",
    "azure-mgmt-resource>=23.0.1",
    "aiohttp>=3.9.0",
    "pandas>=2.1.0",
    "click>=8.1.7",
    "pydantic>=2.5.0",
    "tenacity>=8.2.3",
    "openpyxl>=3.1.2",
    "tqdm>=4.66.0",
    "requests>=2.31.0",
    "pillow>=10.1.0",
    "cryptography>=41.0.0",
    "duckdb>=0.9.0"
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.1",
    "black>=23.9.1",
    "flake8>=6.1.0",
    "mypy>=1.6.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[project.scripts]
azure-permissions-web = "main:app"